--- a/build.xml
+++ b/build.xml
@@ -105,6 +105,7 @@
 
   <!-- generate separate jar files for client and server application -->
   <target name="build-jar" depends="build-client-jar, build-server-jar" />
+  <target name="jar" depends="build-client-jar, build-server-jar" />
 
   <!-- run test cases -->
   <target name="test" depends="build">
