--- a/build.xml
+++ b/build.xml
@@ -10,13 +10,18 @@
   <property name="src.dir"       value="src"/>
   <property name="lib.dir"       value="libs"/>
 
+  <!-- Configuration for ecs application -->
+  <property name="ecsjar.file"      value="m2-ecs.jar"/>
+  <property name="ecsmanifest.file" value="ECS_MANIFEST.MF"/>
+  <property name="ecsmain.class" value="app_kvECS.ECSClient"/>
+
   <!-- Configuration for client application -->
-  <property name="clientjar.file"      value="m1-client.jar"/>
+  <property name="clientjar.file"      value="m2-client.jar"/>
   <property name="clientmanifest.file" value="CLIENT_MANIFEST.MF"/>
   <property name="clientmain.class" value="app_kvClient.KVClient"/>
 
   <!-- Configuration for server application -->
-  <property name="serverjar.file"      value="m1-server.jar"/>
+  <property name="serverjar.file"      value="m2-server.jar"/>
   <property name="servermanifest.file" value="SERVER_MANIFEST.MF"/>
   <property name="servermain.class" value="app_kvServer.KVServer"/>
 
@@ -67,6 +72,24 @@
     </javac>
   </target>
 
+  <!-- build ecs jar -->
+  <target name="build-ecs-jar" depends="build">
+    <delete file="${ecsjar.file}" />
+    <delete file="${ecsmanifest.file}" />
+
+    <manifest file="${ecsmanifest.file}" >
+      <attribute name="built-by" value="${user.name}" />
+      <attribute name="Main-Class" value="${ecsmain.class}" />
+      <attribute name="Class-Path" value="${project.classpath}"/>
+    </manifest>
+
+    <jar destfile="${ecsjar.file}" basedir="${build.dir}"
+        manifest="${ecsmanifest.file}">
+      <fileset dir="${build.dir}" includes="**/*.class" />
+      <zipgroupfileset dir="${lib.dir}" includes="**/*.jar" />
+    </jar>
+  </target>
+
   <!-- build client jar -->
   <target name="build-client-jar" depends="build">
     <delete file="${clientjar.file}" />
@@ -104,8 +127,7 @@
   </target>
 
   <!-- generate separate jar files for client and server application -->
-  <target name="build-jar" depends="build-client-jar, build-server-jar" />
-  <target name="jar" depends="build-client-jar, build-server-jar" />
+  <target name="build-jar" depends="build-client-jar, build-server-jar, build-ecs-jar" />
 
   <!-- run test cases -->
   <target name="test" depends="build">
