Added Basic ECS Support without Zookeeper

--- a/build.xml
+++ b/build.xml
@@ -72,6 +72,15 @@
     </javac>
   </target>
 
+  <target name="jar" depends="init">
+    <echo message="${ant.project.name}: ${ant.file}"/>
+    <javac debug="true" debuglevel="${debuglevel}" destdir="bin"
+          source="${source}" target="${target}"
+          classpathref="project.classpath" includeantruntime="false">
+      <src path="${src.dir}"/>
+    </javac>
+  </target>
+
   <!-- build ecs jar -->
   <target name="build-ecs-jar" depends="build">
     <delete file="${ecsjar.file}" />
